<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.investing101.MainActivity">

        <TextView
            style="@style/header"

            android:text="@string/header" />


        <TextView
            style="@style/answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/wallets" />

        <TextView
            style="@style/questions"

            android:gravity="start"
            android:text="@string/firstquestion"

            />

        <CheckBox
            android:id="@+id/liquidation"

            style="@style/answers"
            android:text="@string/liquidation" />


        <CheckBox
            android:id="@+id/firesale"

            style="@style/answers"
            android:text="@string/firesale" />

        <CheckBox
            android:id="@+id/trashcan"

            style="@style/answers"
            android:text="@string/trashcan" />

        <TextView

            style="@style/questions"
            android:gravity="start"
            android:text="@string/secondquestion"

            />

        <CheckBox
            android:id="@+id/pe"


            style="@style/answers"
            android:text="@string/pe" />


        <CheckBox
            android:id="@+id/cookies"


            style="@style/answers"
            android:text="@string/cookies" />

        <CheckBox
            android:id="@+id/cashflow"


            style="@style/answers"
            android:text="@string/cashflow" />

        <TextView

            style="@style/questions"
            android:gravity="start"
            android:text="@string/thirdquestion"

            />

        <CheckBox
            android:id="@+id/dcf"


            style="@style/answers"
            android:text="@string/dcf" />


        <CheckBox
            android:id="@+id/fees"


            style="@style/answers"
            android:text="@string/fees" />

        <CheckBox
            android:id="@+id/savings"


            style="@style/answers"
            android:text="@string/savings" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@drawable/bankrupt" />

        <TextView
            android:id="@+id/textView"
            style="@style/questions"

            android:gravity="start"
            android:text="@string/fourthquestion" />

        <CheckBox
            android:id="@+id/debttoequity"


            style="@style/answers"
            android:text="@string/debttoequity" />


        <CheckBox
            android:id="@+id/ceo"


            style="@style/answers"
            android:text="@string/ceo" />

        <CheckBox
            android:id="@+id/salary"

            style="@style/answers"
            android:text="@string/salary" />

        <TextView

            style="@style/questions"

            android:text="@string/fifthquestion"

            />

        <CheckBox
            android:id="@+id/stockgrowth"


            style="@style/answers"
            android:text="@string/stockgrowth" />


        <CheckBox
            android:id="@+id/roic"


            style="@style/answers"
            android:text="@string/roic" />

        <CheckBox
            android:id="@+id/dividend"


            style="@style/answers"
            android:text="@string/dividend" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/difficult" />

        <TextView
            android:id="@+id/textView2"
            style="@style/questions"

            android:gravity="start"
            android:text="@string/sixthquestion" />

        <CheckBox
            android:id="@+id/fund"


            style="@style/answers"
            android:text="@string/fund" />


        <CheckBox
            android:id="@+id/cnbc"


            style="@style/answers"
            android:text="@string/cnbc" />

        <CheckBox
            android:id="@+id/vanguard"


            style="@style/answers"
            android:text="@string/vanguard" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text" />

        <Button
            style="@style/buttonStyle"
            android:onClick="submit"
            android:text="@string/button" />


        <TextView
            android:id="@+id/scoreMessage"

            style="@style/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <Button
            style="@style/buttonStyle"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:onClick="reset"

            android:text="@string/reset" />


    </LinearLayout>
</ScrollView>